--- a/SayinEditor/app/src/main/res/values/strings.xml
+++ b/SayinEditor/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="speech_prompt">What is your code ?</string>
+    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
+
     <string name="action_settings">Settings</string>
 </resources>
